<resources>
    <string name="app_name">BookBuddies</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="createAccountTitle">Create an account</string>
    <string name="emailHint">Enter Email</string>
    <string name="usernameHint">Enter username</string>
    <string name="passwordHint">Enter password</string>
    <string name="createAccountButton">Create Account</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="passwordConfirmationHint">Confirm password</string>
    <string name="signInTitle">Sign in to your account</string>
    <string name="signInButton">Login</string>
    <string name="signOutButton">SignOut</string>
    <string name="newAccountButton">Create New Account</string>
    <string name="myProfile">My Profile</string>
    <string name="addNewBook">Add New Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BookRecommendationsTitle">Books you might like</string>
    <string name="CloseBooks">Books closest to you</string>
    <string name="seeAll">See All</string>
    <string name="closeBooks">Books closest to you</string>
    <string name="titleHint">Title</string>
    <string name="authorHint">Author</string>
    <string name="ISBNHint">ISBN</string>
    <string name="SignInTitle">Sign in to your account</string>
    <string name="descriptionHint">Description</string>
    <string name="imageFromStorage">From Storage</string>
    <string name="newImage">New Picture</string>
    <string name="deleteImage">Delete Image</string>
    <string name="expandAll">Expand All</string>
    <string name="clubNameHint">Club Name</string>
    <string name="currentBookHint">Book you are reading</string>
    <string name="AddClubTitle">Add a new club</string>
    <string name="detailedListMenuItem">Detailed Book List</string>
    <string name="showUnavailable">Show Unavailable Books</string>
    <string name="scanTest">Scan</string>
    <string name="seeRequestButton">See Requests</string>
    <string name="RequestButton">Request Book</string>
    <string name="clubNotifTitle">Club Requests</string>
    <string name="bookRequestTitle">Book Requests</string>
    <string name="notifications">Notifications</string>
    <string name="seeClubRequests">Club Requests</string>
    <string name="acceptButton">Accept Request</string>
    <string name="declineButton">Decline Request</string>
    <string name="viewPendingTransactionsButton">View Pending Transactions</string>
    <string name="startTransaction">Start Transaction</string>
    <string name="pendingBorrowsFrom">Borrows from me</string>
    <string name="pendingReturnsFrom">Returns to me</string>
    <string name="pendingBorrowsTo">My Borrows</string>
    <string name="pendingReturnsTo">My Returns</string>
    <string name="viewPendingRequestsButton">View My Requests</string>
    <string name="viewBooksBorrowing">View Books I am Borrowing</string>
    <string name="seeBookButton">See Book</string>
    <string name="goToClubChatButton">Club Chat</string>
    <string name="sendMessage">Send</string>
    <string name="messageHint">Message</string>
    <string name="title_activity_maps">Map</string>
    <string name="bookRequestNotifTitle">Book Requests</string>


</resources>
