<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewBookFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".NewBookFragment">


            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/titleLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bookImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/titleEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/titleHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/authorLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/authorEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/authorHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ISBNLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ISBNEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/ISBNHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/DesLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ISBNLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/DesEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/descriptionHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DesLayout"
                android:layout_marginLeft="300dp"
                android:layout_marginBottom="65dp"
                android:layout_marginTop="50dp"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.849"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.503" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>